fixed carter's bio

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -28,7 +28,7 @@
 [[main]]
   name = "Carter Vargas"
   parent = "Team Members"
-  pageRef = "MarkFontenot"
+  pageRef = "cartervargas"
   weight = 20
 
 [[main]]
