--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -2,7 +2,7 @@ disabled = false
 languageCode = "en"
 languageName = "English"
 weight = 1
-title = "Summer 2025 Data and Software DoC Blog"
+title = "Pushing Policy"
 
 [params]
   displayName = "EN"
